--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,113 @@
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
 
-# Precompiled Headers
-*.gch
-*.pch
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
+*.bak
+*~
 
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
 *.exe
+
+objlin/
+objlin_ui_/
+objlin_uic/
+objlin_uif/
+objlin_uid/
+
+objmng/
+objmng_ui_/
+objmng_uic/
+objmng_uiw/
+objmng_uif/
+
+ppo/
+html/
+dvi/
+code_generated/
+error
+error--*
+
+commit-message
+/g-*
+/*.savex
+
+
+
+outc
+outcpp
+outlnk
+outpre
+outlemon
+outflex
+outtth
+compopt
+rsplink
+gccver.opt
+
+
+*.tmp
+*.nopack
+*.class
+*.jar
+*.dll
+*.exp
+*.so
+*.lib
+*.a
+*.obj
+*.o
+*.pyc
+*.toc
+*.aux
+*.dvi
+*.lj
+*.log
+*.rul
 *.out
-*.app
+
+commit-message
+
+
+#installed
+usr/include/cccgtk.h
+usr/include/gdk.ch
+usr/include/gtk.ch
+
+
+log-*
+log
+exe
+pid
+
+exe-db2/
+exe-my/
+exe-ora/
+exe-pg/
+exe-sqlite3/
+
+
+#symlink
+usr/bin/freebsd/*
+!usr/bin/freebsd/*.b
+usr/bin/linux/*
+!usr/bin/linux/*.b
+usr/bin/netbsd/*
+!usr/bin/netbsd/*.b
+usr/bin/solaris/*
+!usr/bin/solaris/*.b
+
+usr/bin/linux/__linux.b
+usr/bin/linux/bapp_linux.b
+usr/bin/linux/bapp_linux0.b
+usr/bin/linux/bapp_linux_.b
+usr/bin/linux/bapp_linux_btbtx.b
+usr/bin/linux/bapp_linux_datidx.b
+usr/bin/linux/bapp_linux_dbfctx.b
+usr/bin/linux/bapp_linuxc.b
+usr/bin/linux/bapp_linuxc_btbtx.b
+usr/bin/linux/bapp_linuxc_datidx.b
+usr/bin/linux/bapp_linuxc_dbfctx.b
+usr/bin/linux/bapp_linuxg.b
+usr/bin/linux/bapp_linuxg_dbfctx.b
+
+
+gtkapi.bt
+
+
